services/media-services/plex/resources/deployment-plex.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media-plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 32400
              name: plex
              protocol: TCP
            - containerPort: 1900
              name: plen-dlna1
              protocol: UDP
            - containerPort: 5353
              name: bonjour
              protocol: UDP
            - containerPort: 8324
              name: plex-roku
              protocol: TCP
            - containerPort: 32410
              name: gdm-net1
              protocol: UDP
            - containerPort: 32412
              name: gdm-net2
              protocol: UDP
            - containerPort: 32413
              name: gdm-net3
              protocol: UDP
            - containerPort: 32414
              name: gdm-net4
              protocol: UDP
            - containerPort: 32469
              name: plex-dlna2
              protocol: TCP
          volumeMounts:
            - name: media
              mountPath: /hl15-media
            - name: config
              mountPath: /config
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: plex-media
        - name: config
          persistentVolumeClaim:
            claimName: plex-config
