services/media-services/plex/resources/service-plex-extras.yml
apiVersion: v1
kind: Service
metadata:
  name: plex-extras 
  namespace: media-plex
  annotations:
    metallb.universe.tf/allow-shared-ip: "core-services"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.31
  externalTrafficPolicy: Cluster
  ports:
    - port: 1900
      targetPort: 1900
      name: plen-dlna1
      protocol: UDP
    - port: 5353
      targetPort: 5353
      name: bonjour
      protocol: UDP
    - port: 8324
      targetPort: 8324
      name: plex-roku
      protocol: TCP
    - port: 32410
      targetPort: 32410
      name: gdm-net1
      protocol: UDP
    - port: 32412
      targetPort: 32412
      name: gdm-net2
      protocol: UDP
    - port: 32413
      targetPort: 32413
      name: gdm-net3
      protocol: UDP
    - port: 32414
      targetPort: 32414
      name: gdm-net4
      protocol: UDP
    - port: 32469
      targetPort: 32469
      name: plex-dlna2
      protocol: TCP
  selector:
    app: plex
