services/media-services/plex/resources/service-plex.yml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media-plex
spec:
  ports:
    - name: plex
      port: 32400
      targetPort: 32400
  selector:
    app: plex
