services/media-services/plex/resources/ingress-plex.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: media-plex
  
spec:
  entryPoints:
    - websecure
    - web

  routes:
    - match: Host(`plex.nebulanet.xyz`)
      kind: Rule
      services:
        - name: plex
          kind: Service
          port: 32400
  tls:
    secretName: plex-tls
